--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,32 @@
 /* write css here */
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+
+  display: flex;
+  justify-content: center;
+  background-color: #fefefc;
+
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #333;
+}
+
+.container {
+  margin: 4rem 0;
+  flex: 0 1 110rem;
+  min-height: 110vh;
+}
